[package]
name = "scramble_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = "0.11.22"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["default", "full"] }
zip = { version = "0.6.6", default-features = false, features = ["aes", "aes-crypto", "deflate"] }
wasm-bindgen-futures = "0.4.39"
wasm-bindgen = "0.2.89"
web-sys = "0.3.55"
